# Chip-8-VM-Emulator

./: .travis.yml  Cargo.toml  README.md  imgui.ini
.github/workflows/: rust.yml
src/: chip8_state.rs  chip8_vm.rs  fonts_sprites.rs  imgui_wrapper.rs  instructions.rs  main.rs  main_state.rs  setup.rs  test.rs  utils.rs  write_to_memory.rs
src/debug/: mod.rs
src/debug/gui/: imgui_render.rs  imgui_wrapper.rs  mod.rs
src/gui/: imgui_render.rs  imgui_wrapper.rs
