[package]
name = "chip8_vm_rs"
version = "0.1.0"
authors = ["Mapet <jakubsordyl1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.1", features = ["bundled", "static-link"] }
clap = "2.33.2"