[package]
name = "chip8_vm_rs"
version = "0.1.0"
authors = ["Mapet <jakubsordyl1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

ggez = "0.5.1"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
imgui = "0.4"
imgui-gfx-renderer = "0.4"